FANET Simulation using TF-PPO and MOGS